objects/sf_devops__Back_Sync__c.object
<CustomObject>
    <description>Store Back Sync operations.</description>
    <fields>
        <fullName>sf_devops__Deployment_Result__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The results of our deployment into the dev environment</description>
        <label>Deployment Result</label>
        <referenceTo>sf_devops__Deployment_Result__c</referenceTo>
        <relationshipLabel>Back Syncs</relationshipLabel>
        <relationshipName>Back_Syncs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sf_devops__Destination_Environment__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The destination environment of a back sync.</description>
        <label>Destination Environment</label>
        <referenceTo>sf_devops__Environment__c</referenceTo>
        <relationshipLabel>Destination Back Syncs</relationshipLabel>
        <relationshipName>Destination_Back_Syncs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sf_devops__End_Revision_Counter__c</fullName>
        <label>End Revision Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sf_devops__Operation_Result__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Operation Result</label>
        <referenceTo>sf_devops__Async_Operation_Result__c</referenceTo>
        <relationshipLabel>Back Sync</relationshipLabel>
        <relationshipName>Back_Syncs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sf_devops__Source_Pipeline_Stage__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The source stage of a back sync.</description>
        <label>Source Pipeline Stage</label>
        <referenceTo>sf_devops__Pipeline_Stage__c</referenceTo>
        <relationshipLabel>Source Back Syncs</relationshipLabel>
        <relationshipName>Source_Back_Syncs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sf_devops__Start_Revision_Counter__c</fullName>
        <label>Start Revision Counter</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Back Sync</label>
    <nameField>
        <label>Back Sync Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Back Synchs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>